Fixed OpenJDK 1.8 problems